fix header y-axis spacing and switch to Open Sans-Light for regular type

--- a/src/styles/_typecolor.scss
+++ b/src/styles/_typecolor.scss
@@ -3,3 +3,5 @@ $script-font: 'Dancing Script', cursive;
 
 $vy-blue-regular: #64d5f8;
 $vy-blue-light: #7de4ff;
+
+$mockup-blue-regular: #1AC6FC;
