--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -11,7 +11,7 @@ $burger-active-color: $vy-blue-regular;
   // position: absolute;
   background-color: $header-color;
   width: 100%;
-  height: 4.6rem;
+  height: 8.2rem;
   overflow: auto;
   z-index: 3;
   padding-top: 0.5rem;
@@ -32,7 +32,7 @@ $burger-active-color: $vy-blue-regular;
 
   .navLinkContainer {
     float: right;
-    margin-top: 1.6rem;
+    margin-top: 5rem;
     margin-right: 8.4rem;
     display: flex;
     // width: 40rem;
@@ -66,7 +66,6 @@ main {
   min-height: fit-content;
   height: 94vh;
   margin: 0 auto;
-  padding-top: 1rem;
 
   @include smallerMedia {
     // background-color: green;
